--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "block-based-website-builder",
-  "version": "0.1.0",
+  "private": true,
   "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "16.x",
-    "npm": "8.5.0",
-    "yarn": "3.2.0"
-  },
+  "license": "MIT",
+  "sideEffects": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "remix build",
+    "dev": "remix dev",
+    "start": "remix-serve build"
+  },
+  "dependencies": {
+    "@remix-run/node": "^1.3.5",
+    "@remix-run/react": "^1.3.5",
+    "@remix-run/serve": "^1.3.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@remix-run/dev": "^1.3.5",
+    "@remix-run/eslint-config": "^1.3.5",
+    "eslint": "^8.11.0"
+  },
+  "engines": {
+    "node": ">=14"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cyrus01337/block-based-website-builder.git"
   },
   "author": "cyrus01337, JPod32, Omar (r0xly), searchingforyou",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/cyrus01337/block-based-website-builder/issues"
   },
-  "homepage": "https://github.com/cyrus01337/block-based-website-builder#readme",
-  "packageManager": "yarn@3.2.0"
+  "homepage": "https://github.com/cyrus01337/block-based-website-builder#readme"
 }
