--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "npm run build:css & remix build",
+    "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "start": "remix-serve build"
   },
   "dependencies": {
@@ -19,7 +21,11 @@
   "devDependencies": {
     "@remix-run/dev": "^1.3.5",
     "@remix-run/eslint-config": "^1.3.5",
-    "eslint": "^8.11.0"
+    "autoprefixer": "^10.4.4",
+    "concurrently": "^7.1.0",
+    "eslint": "^8.11.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   },
   "engines": {
     "node": ">=14"
