--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "block-based-website-builder",
+  "name": "remix-template-remix",
   "private": true,
   "description": "",
-  "license": "MIT",
+  "license": "",
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
@@ -19,18 +19,12 @@
   "devDependencies": {
     "@remix-run/dev": "^1.3.5",
     "@remix-run/eslint-config": "^1.3.5",
-    "eslint": "^8.11.0"
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "eslint": "^8.11.0",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=14"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cyrus01337/block-based-website-builder.git"
-  },
-  "author": "cyrus01337, JPod32, Omar (r0xly), searchingforyou",
-  "bugs": {
-    "url": "https://github.com/cyrus01337/block-based-website-builder/issues"
-  },
-  "homepage": "https://github.com/cyrus01337/block-based-website-builder#readme"
+  }
 }
